</head>
<body>
<div class=menu>
<p><table id="navigation">
<tr>
<th><a href="index.html">Home</a></th>
<th><a href="music.html">Music</a></th>
<th><a href="software.html">Software</a></th>
<th><a href="art.html">Art</a></th>
<th><a href="words.html">Words</a></th>
<th><a href="contact.html">Contact</a></th>
</tr>
</table>
</div>
<div id=body>
<!--  content goes HERE  -->

<p>Listen: <a href="https://shop.mentalgroove.ch/album/passion-for-numbers">Passion for Numbers</a> released April 4, 2022

<p>Listen: <a href="https://chriskorda.bandcamp.com/album/demons-in-my-head">Demons In My Head</a> (Making of story <a href="http://polymeter.blogspot.com/2022/03/demon-in-my-head.html">here</a>)

<p>Pre-order: <a href="https://shop.mentalgroove.ch/album/passion-for-numbers">Passion For Numbers</a> on Mental Groove Records

<p>See: <a href="https://www.confort-moderne.fr/fr/agenda/event/The-Woman-of-the-Future-Chris-Korda-une-rtrospective/2673">The (Wo)Man of the Future</a> at Le Confort Moderne

<p>Read: <a href="https://www.dailystar.co.uk/news/weird-news/twisted-cult-campaigned-humanity-kill-26141629">Church of Euthanasia in the Daily Star</a>

<p>Read: <a href="http://www.agenteprovocador.es/publicaciones/salva-el-planeta-y-suicidate-los-suicidas-de-barcelona">Agente Provocador</a> article on CoE in Barcelona (Spanish)

<p>Buy: <a href="http://www.arpabong.com/plants-planet-and-demystification/">Plants, Planet and Demystification</a> ("A Thin Layer of Oily Rock" book)

<p>Read: <a href="https://www.chriskorda.com/atonal/GranularModulations.htm">Granular Modulations</a>

<p>Listen: <a href="https://rwm.macba.cat/en/specials/objecthood-8">Objecthood #8</a> (also <a href="https://archive.org/details/chris-korda-interview-objecthood">transcript</a> and <a href="https://archive.org/details/chris-korda-interview-objecthood-audio">original audio</a>)
