@@ -124,6 +124,7 @@ There's also a <a href="math/convergences_bigint.html">BigInt version</a>.
 <li><a href="atonal/FundamentalPatterns.htm">Fundamental Patterns</a>
 <li><a href="atonal/GranularModulations.htm">Granular Modulations</a>
 <li><a href="atonal/GrayChangeRinging.htm">Gray Change Ringing</a>
+<li><a href="chris-korda-software-CV.html">Software CV</a>
 </ul>
 
 <!--  content stops HERE  -->
