@@ -24,6 +24,8 @@
 <div id=body>
 <!--  content goes HERE  -->
 
+<p>Read: <a href="https://lastchancetourism.blogspot.com/">Last Chance Tourism</a> (my new blog!)
+
 <p>Listen: <a href="https://shop.mentalgroove.ch/album/passion-for-numbers">Passion for Numbers</a> released April 4, 2022
 
 <p>Listen: <a href="https://chriskorda.bandcamp.com/album/demons-in-my-head">Demons In My Head</a> (Making of story <a href="http://polymeter.blogspot.com/2022/03/demon-in-my-head.html">here</a>)
